--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     --key-normal: #FFCC80;
     --key-accented: #FFA726;
     --key-important: #FF6D00;
-    --key-dark: #be4300;
+    --key-dark: #BE4300;
     --error: #E91B0C;
     --background: #FAFAFA;
     --sidenav: #FCFCFC;
@@ -22,6 +22,7 @@
     --key-low: #7E3A10;
     --key-low2: #783308;
     --key-normal: #AF5510;
+    --key-dark: #FFCC80;
     --key-important: #FFE0B2;
     --error: #F9928B;
     --background: #303030;
